# happy-wakey.rs

./: .cli-flags.toml  .env.example  Cargo.toml  README.md  build.rs  supabase_setup.sql  todos.md
cpp/: webengine_shim.h
qml/: BrowserPanel.qml  CalendarPanel.qml  HomePanel.qml  MainWindow.qml  NewsPanel.qml  OnboardingPanel.qml  SettingsPanel.qml  StocksPanel.qml  Theme.qml  WeatherPanel.qml
src/: config.rs  env_config.rs  http.rs  main.rs  supabase.rs  supabase_config.rs
src/services/: calendar.rs  mod.rs  news.rs  stocks.rs  weather.rs
