[package]
name = "happy-wakey"
version = "0.1.0"
edition = "2021"

[dependencies]
qmetaobject = { version = "0.2", features = ["webengine"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking"] }
chrono = { version = "0.4", features = ["serde"] }
url = "2"
uuid = { version = "1", features = ["v4"] }
rand = "0.8"
base64 = "0.22"
sha2 = "0.10"
webbrowser = "1"
tiny_http = "0.12"
git2 = "0.19"
dirs = "6"
once_cell = "1"
cstr = "0.2"
dotenvy = "0.15"
toml = "0.8"

[build-dependencies]
qmetaobject = { version = "0.2", features = ["webengine"] }
