[package]
name = "happy-wakey"
version = "0.1.0"
edition = "2021"

[dependencies]
# Rust <-> Qt bridge (memory-safe, typed; replaces qmetaobject)
cxx = "1"
cxx-qt = "0.7"
cxx-qt-lib = { version = "0.7", features = ["qt_full"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking"] }
chrono = { version = "0.4", features = ["serde"] }
url = "2"
rand = "0.8"
base64 = "0.22"
sha2 = "0.10"
webbrowser = "1"
dirs = "6"
dotenvy = "0.15"

[build-dependencies]
cxx-qt-build = { version = "0.7", features = ["link_qt_object_files"] }
